--- a/index.qmd
+++ b/index.qmd
@@ -37,6 +37,8 @@ library(tidyverse)
 
 ## Shortcut of the day
 
+::: incremental
+
 `Alt + Shift + K`
 
 </br>
@@ -44,6 +46,9 @@ library(tidyverse)
 ::: {.fragment .highlight-red}
 Shows all keyboard shortcuts!
 :::
+
+:::
+
 
 
 ## Relational Data
