--- a/index.qmd
+++ b/index.qmd
@@ -261,21 +261,21 @@ band_instruments %>%
 How to combine all observations from the two tables band_members and band_instruments to get a table as shown here.
 
 ::: columns
-::: {.column width="60%"}
+::: {.column width="40%"}
 
 a)    left_join 
 
 ::: {.fragment .highlight-red}
-
 b)    full_join 
-
 :::
-c)    right_join
 
+c)    right_join
 d)    inner_join 
 :::
 
-::: {.column width="40%"}
+::: {.column width="60%"}
+![](img/band_members.png)
+![](img/band_instruments.png)
 ![](img/quiz2.png)
 
 :::
